--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
     "require": {
         "jaeger/querylist": "^4.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Foo\\": "Common/"
+        }
     }
 }
